"homepage":"https://ig-kim2511.github.io/me_2022-0322-message_window_of_action-react-build/",

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "me_2022-0322-message_window_of_action-react",
+  "homepage":"https://ig-kim2511.github.io/me_2022-0322-message_window_of_action-react-build/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
